# relivio-sdk-python

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: rationale.md
src/relivio/: __init__.py  capture.py  client.py  environment.py  errors.py  http.py  stats.py
src/relivio/resources/: __init__.py  deployments.py  ingest.py  protection.py  verdicts.py
src/relivio/types/: __init__.py  deployments.py  errors.py  ingest.py  options.py  protection.py  verdicts.py
tests/: test_capture.py  test_client.py  test_deployments.py  test_http.py  test_ingest.py  test_protection.py  test_verdicts.py
