[project]
name = "relivio"
version = "0.1.0"
description = "Primitive Python client for Relivio deploy registration, ingest, and exception capture."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["httpx>=0.27,<1"]
keywords = ["relivio", "deploy", "ingest", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/lazypl82/relivio-sdk-python"
Repository = "https://github.com/lazypl82/relivio-sdk-python"
Issues = "https://github.com/lazypl82/relivio-sdk-python/issues"
PyPI = "https://pypi.org/project/relivio/"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.22"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/relivio"]
